[gd_scene load_steps=16 format=3 uid="uid://bdqcch58ny85f"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_37p43"]
[ext_resource type="Texture2D" uid="uid://dpyefhmxfkepu" path="res://Assets/UI/MainBGLighter.png" id="2_vrw4o"]
[ext_resource type="Texture2D" uid="uid://b1gcjcf4qbryi" path="res://Assets/UI/button_primary_normal.png" id="2_yvb42"]
[ext_resource type="Theme" uid="uid://dqqmva14h5al4" path="res://Utils/Themes/label.tres" id="3_317em"]
[ext_resource type="Texture2D" uid="uid://c0sayeopluoor" path="res://Assets/UI/button_primary_pressed.png" id="3_wmjq0"]
[ext_resource type="Texture2D" uid="uid://3qogcbfh4881" path="res://Assets/UI/button_exit.png" id="4_e1icq"]
[ext_resource type="Texture2D" uid="uid://ct4oto8qjn1xw" path="res://Assets/UI/button_exit_pressed.png" id="5_xjqnw"]
[ext_resource type="Texture2D" uid="uid://12h5dofygqgs" path="res://Assets/UI/button_settings.png" id="6_txnc6"]
[ext_resource type="Texture2D" uid="uid://biicnt0mj8rsn" path="res://Assets/UI/button_settings_pressed.png" id="7_mbsrj"]
[ext_resource type="Texture2D" uid="uid://c1d7mpor85pkl" path="res://Assets/UI/ExitModel.png" id="10_l0yw5"]
[ext_resource type="Texture2D" uid="uid://c1wk82yd0x01c" path="res://Assets/UI/button_yes_exit_normal.png" id="11_5mf3j"]
[ext_resource type="Texture2D" uid="uid://dynm4vuix8362" path="res://Assets/UI/button_yes_exit_pressed.png" id="12_rsih8"]
[ext_resource type="Texture2D" uid="uid://dfdop1ufla8wo" path="res://Assets/UI/button_no_exit_normal.png" id="13_wiqc1"]
[ext_resource type="Texture2D" uid="uid://ltnj1e2igrxw" path="res://Assets/UI/button_no_exit_pressed.png" id="14_lqgyn"]
[ext_resource type="AudioStream" uid="uid://caehe17orvu1p" path="res://Assets/Audios/click1.ogg" id="16_acu6k"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_37p43")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="MainBg" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(538, 1082)
scale = Vector2(0.412, 0.4)
texture = ExtResource("2_vrw4o")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -284.5
offset_top = 314.0
offset_right = 284.5
offset_bottom = 422.0
grow_horizontal = 2

[node name="GameNameGulam" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_317em")
theme_type_variation = &"Header"
text = "GULAM "

[node name="GameNameChor" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_317em")
theme_type_variation = &"Header"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CHOR"

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -54.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="SingleMode" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_yvb42")
texture_pressed = ExtResource("3_wmjq0")

[node name="Label" type="Label" parent="UI/VBoxContainer/SingleMode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -30.5
offset_right = 162.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_317em")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Singleplayer Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerMode" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_yvb42")
texture_pressed = ExtResource("3_wmjq0")

[node name="Label" type="Label" parent="UI/VBoxContainer/MultiplayerMode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_317em")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Multiplayer Mode"

[node name="ExitButton" type="TextureButton" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -159.0
offset_right = -48.0
offset_bottom = -59.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("4_e1icq")
texture_pressed = ExtResource("5_xjqnw")

[node name="SettingsButton" type="TextureButton" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -156.0
offset_right = 164.0
offset_bottom = -56.0
grow_vertical = 0
texture_normal = ExtResource("6_txnc6")
texture_pressed = ExtResource("7_mbsrj")

[node name="PanelContainer" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -825.0
offset_top = -1312.0
offset_right = 841.0
offset_bottom = 1572.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExitModelContainer" type="Control" parent="UI/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/PanelContainer/ExitModelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -275.0
offset_right = 400.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_l0yw5")

[node name="YesButton" type="TextureButton" parent="UI/PanelContainer/ExitModelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 142.0
offset_right = 400.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
texture_normal = ExtResource("11_5mf3j")
texture_pressed = ExtResource("12_rsih8")

[node name="NoButton" type="TextureButton" parent="UI/PanelContainer/ExitModelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 142.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("13_wiqc1")
texture_pressed = ExtResource("14_lqgyn")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("16_acu6k")
volume_db = 2.0
bus = &"SFX"

[connection signal="pressed" from="UI/VBoxContainer/SingleMode" to="." method="_on_single_mode_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/MultiplayerMode" to="." method="_on_multiplayer_mode_pressed"]
[connection signal="pressed" from="UI/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="UI/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="UI/PanelContainer/ExitModelContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="UI/PanelContainer/ExitModelContainer/NoButton" to="." method="_on_no_button_pressed"]
